--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body, html {
 }
 
 button.btn-success {
-  background-color: #22a837 !important; /* Зеленый цвет, как у Сбербанка */
+  background-color: #22a837 !important; 
   border-color: #22a837 !important;
   color: white;
   transition: background-color 0.3s, border-color 0.3s;
@@ -65,7 +65,7 @@ button.btn-danger:hover {
 }
 
 .table-container {
-  margin-top: 20px; /* Добавить больше расстояния между кнопкой и таблицей */
+  margin-top: 20px; 
 }
 
 input[type="text"] {
